--- a/src/style/medecinStyle/consultation.css
+++ b/src/style/medecinStyle/consultation.css
@@ -7,12 +7,12 @@
   min-height: 100%;
   display: flex;
   justify-content: center;
-  font-family: Inter, sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: Inter, sans-serif;
 }
 .consultation .consultation__container {
   display: flex;
   flex-direction: column;
-  width: 90%;
+  width: 95%;
 }
 .consultation .consultation__container h2 {
   align-self: center;
