--- a/src/style/adminStyle/ajout/ajoutUser.css
+++ b/src/style/adminStyle/ajout/ajoutUser.css
@@ -5,6 +5,8 @@
 .container_form {
   animation: table 200ms ease;
   width: 95%;
+  height: -moz-fit-content;
+  height: fit-content;
   margin: 1rem 0;
   border-radius: 5px;
   box-shadow: 0px 2px 10px 0px rgba(58, 53, 65, 0.1);
@@ -56,6 +58,7 @@
   display: none;
 }
 .container_form form .image_upload button {
+  margin: 0;
   font-size: 1rem;
   width: 5rem;
   padding: 0.4rem 0.5rem;
@@ -87,7 +90,8 @@
   font-weight: 500;
   color: #2e2e2e;
 }
-.container_form form .input_section .input_conteneur input, .container_form form .input_section .input_conteneur select {
+.container_form form .input_section .input_conteneur input,
+.container_form form .input_section .input_conteneur select {
   font-family: inter, sans-serif;
   padding-left: 0.5rem;
   height: 2.5rem;
@@ -99,10 +103,12 @@
   border: 1px solid #aaa;
   background-color: #fff;
 }
-.container_form form .input_section .input_conteneur input:hover, .container_form form .input_section .input_conteneur select:hover {
+.container_form form .input_section .input_conteneur input:hover,
+.container_form form .input_section .input_conteneur select:hover {
   border: 1px solid #8d8d8d;
 }
-.container_form form .input_section .input_conteneur input:focus, .container_form form .input_section .input_conteneur select:focus {
+.container_form form .input_section .input_conteneur input:focus,
+.container_form form .input_section .input_conteneur select:focus {
   outline: 2px solid darkgreen;
 }
 .container_form form .input_section .input_conteneur .dates {
@@ -123,6 +129,56 @@
 .container_form form .input_section .input_conteneur .dates input[type=text] {
   width: 100%;
   box-sizing: border-box;
+}
+.container_form form .service {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+.container_form form .service .service_info {
+  width: 15rem;
+}
+.container_form form .service .service_info button {
+  margin-top: 0.5rem;
+  font-size: 1rem;
+  width: 5rem;
+  padding: 0.4rem 0.5rem;
+  background-color: darkgreen;
+  border: 0;
+  color: #fff;
+  font-family: inherit;
+  border-radius: 4px;
+  cursor: pointer;
+}
+.container_form form .service .service_info button:hover {
+  filter: brightness(80%);
+}
+.container_form form .service .service_info h3 {
+  margin-top: 0;
+}
+.container_form form .service .service_info .input_conteneur label {
+  font-family: inter, sans-serif;
+  font-size: 1.1rem;
+  font-weight: 500;
+  color: #2e2e2e;
+}
+.container_form form .service .service_info .input_conteneur input {
+  font-family: inter, sans-serif;
+  padding-left: 0.5rem;
+  height: 2.5rem;
+  outline: none;
+  font-size: 1rem;
+  font-weight: 500;
+  color: #333;
+  border-radius: 5px;
+  border: 1px solid #aaa;
+  background-color: #fff;
+}
+.container_form form .service .service_info .input_conteneur input:hover {
+  border: 1px solid #8d8d8d;
+}
+.container_form form .service .service_info .input_conteneur input:focus {
+  outline: 2px solid darkgreen;
 }
 .container_form form .input_conteneur {
   display: flex;
@@ -159,7 +215,9 @@
   display: flex;
   gap: 1rem;
 }
-.container_form form .btn button, .container_form form .btn span {
+.container_form form .btn button,
+.container_form form .btn span {
+  margin: 0;
   font-family: inherit;
   font-weight: 500;
   font-size: 1rem;
@@ -172,18 +230,37 @@
   border-radius: 4px;
   letter-spacing: 0.8px;
 }
-.container_form form .btn button:nth-child(1), .container_form form .btn span:nth-child(1) {
+.container_form form .btn button:nth-child(1),
+.container_form form .btn span:nth-child(1) {
   background-color: darkgreen;
 }
-.container_form form .btn button:nth-child(1):hover, .container_form form .btn span:nth-child(1):hover {
-  background-color: green;
+.container_form form .btn button:nth-child(1):hover,
+.container_form form .btn span:nth-child(1):hover {
+  filter: brightness(80%);
 }
-.container_form form .btn button:nth-child(2), .container_form form .btn span:nth-child(2) {
+.container_form form .btn button:nth-child(2),
+.container_form form .btn span:nth-child(2) {
   background-color: darkred;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.container_form form .btn button:nth-child(2):hover, .container_form form .btn span:nth-child(2):hover {
-  background-color: red;
+.container_form form .btn button:nth-child(2):hover,
+.container_form form .btn span:nth-child(2):hover {
+  filter: brightness(80%);
+}
+.container_form button {
+  font-size: 1rem;
+  margin-top: 1rem;
+  width: 5rem;
+  padding: 0.4rem 0.5rem;
+  background-color: darkred;
+  border: 0;
+  color: #fff;
+  font-family: inherit;
+  border-radius: 4px;
+  cursor: pointer;
+}
+.container_form button:hover {
+  filter: brightness(80%);
 }/*# sourceMappingURL=ajoutUser.css.map */
