--- a/src/style/laboAM/documentAM/tp.css
+++ b/src/style/laboAM/documentAM/tp.css
@@ -2,9 +2,40 @@
 .tp {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   gap: 3rem;
   height: 100%;
+}
+.tp .no_decor_list {
+  list-style: none;
+  margin: 1rem;
+}
+.tp .point::before {
+  content: "•";
+  vertical-align: sub;
+}
+.tp .tableSemaineContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.tp .tableSemaineContainer .tableSemaine {
+  display: flex;
+  justify-content: space-evenly;
+}
+.tp .tableSemaineContainer .tableSemaine span {
+  width: 4rem;
+}
+.tp .tableSemaineContainer .tableSemaine span:nth-child(2) {
+  width: -moz-fit-content;
+  width: fit-content;
+}
+.tp .tableSemaineContainer .tableSemaine span:nth-child(6) {
+  width: -moz-fit-content;
+  width: fit-content;
+}
+.tp .tableSemaineContainer .tableSemaine span:nth-child(8) {
+  width: -moz-fit-content;
+  width: fit-content;
 }
 .tp .partie1_container {
   display: flex;
@@ -79,10 +110,6 @@
   margin: 0;
   text-align: left;
 }
-.tp .partie2 .liste .liste_container .point::before {
-  content: "•";
-  vertical-align: sub;
-}
 .tp .partie2 .inr {
   display: flex;
   flex-direction: column;
@@ -119,7 +146,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    gap: 10rem;
+    gap: 5rem;
     height: 100vh;
     padding: 1rem;
     width: 100%;
