--- a/src/style/adminStyle/utilisateurs.css
+++ b/src/style/adminStyle/utilisateurs.css
@@ -26,65 +26,7 @@
   gap: 1rem;
   flex-wrap: wrap;
   justify-content: center;
-}
-.user_page .user_page_container .user_items .card {
-  animation: affichage 200ms ease-in-out;
-  transform-origin: center;
-  display: flex;
-  flex-direction: column;
-  box-sizing: border-box;
-  width: 18rem;
-  height: 20rem;
-  border-radius: 5px;
-  box-shadow: 0px 2px 10px 0px rgba(58, 53, 65, 0.1);
-  background-color: #fff;
-}
-.user_page .user_page_container .user_items .card .image_font {
-  height: 60%;
-  background-image: url(../../assets/receptioniste.jpg);
-  background-size: cover;
-  border-radius: 5px 5px 0 0;
-}
-.user_page .user_page_container .user_items .card .info {
-  border-radius: 0 0 5px 5px;
-  background-color: #fff;
-  height: 40%;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 0.5rem;
-  padding: 0.5rem;
-  filter: brightness(90%);
-}
-.user_page .user_page_container .user_items .card .info h3 {
-  font-size: 1rem;
-  margin: 0;
-  color: #2e2e2e;
-  font-weight: 600;
-}
-.user_page .user_page_container .user_items .card .info p {
-  margin: 0;
-  font-size: 0.9rem;
-  color: #666565;
-  font-weight: 500;
-}
-.user_page .user_page_container .user_items .card .info .btn {
-  text-decoration: none;
-  color: #fff;
-  background-color: darkgreen;
-  width: 90%;
-  padding: 1rem;
-  box-sizing: border-box;
-  border-radius: 5px;
-  font-size: 1rem;
-  font-weight: 600;
-  filter: brightness(100%);
-  transition: filter 200ms ease;
-}
-.user_page .user_page_container .user_items .card .info .btn:hover {
-  filter: brightness(80%);
+  padding-bottom: 1rem;
 }
 
 @keyframes affichage {
