--- a/src/style/laboAM/analyseM.css
+++ b/src/style/laboAM/analyseM.css
@@ -6,18 +6,45 @@
   gap: 1rem;
   padding: 1rem;
 }
+.analyse .infoPatient {
+  display: flex;
+  gap: 1rem;
+}
+.analyse .infoPatient button {
+  color: #fff;
+  background-color: darkred;
+  border: 0;
+  width: 6rem;
+  padding: 8px 16px;
+  font-size: 1rem;
+  letter-spacing: 1px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+.analyse .infoPatient button:hover {
+  filter: brightness(80%);
+}
+.analyse .infoPatient .info_patient {
+  display: flex;
+  gap: 1.5rem;
+  background-color: #fff;
+  padding: 0 1rem;
+  border-radius: 4px;
+  box-shadow: 0px 0px 19px 1px rgba(0, 0, 0, 0.3);
+}
+.analyse .infoPatient .info_patient p span:nth-child(1) {
+  font-weight: 700;
+  font-size: large;
+  text-decoration: underline;
+  color: darkgreen;
+}
+.analyse .infoPatient .info_patient p span:nth-child(2) {
+  font-weight: 600;
+  font-size: medium;
+  text-transform: capitalize;
+}
 .analyse h2 {
   margin: 0;
-}
-.analyse p {
-  font-size: 1.2rem;
-  margin: 0;
-  background-color: #fff;
-  padding: 1rem;
-  box-shadow: 0px 2px 10px 0px rgba(58, 53, 65, 0.1);
-}
-.analyse p span {
-  text-transform: capitalize;
 }
 .analyse .analyse_items {
   display: flex;
