--- a/src/style/medecinStyle/dossier/dossierMedical.css
+++ b/src/style/medecinStyle/dossier/dossierMedical.css
@@ -386,7 +386,7 @@
   flex-direction: column;
   gap: 1rem;
   background-color: #fff;
-  padding: 1rem 0;
+  padding: 1rem;
   height: -moz-max-content;
   height: max-content;
 }
